--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
         </script>
 
-        <h1><img src="/fin/img/th.jpg" alt="th.jpg"></h1>
+        <h1><img src="/final/img/th.jpg" alt="th.jpg"></h1>
         <form class="d-flex" role="search">
           <input class="form-control" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
