--- a/rice.html
+++ b/rice.html
@@ -43,7 +43,7 @@
       <div class="image-grid">
           <div class="image-container">
           <a href="#">
-              <img src="/img/Add-onPlainRice_1200x1200.webp" alt="Image 1">
+              <img src="/final/img/Add-onPlainRice_1200x1200.webp" alt="Image 1">
           </a>
           <h2>Plane Rice</h2>
           <p>Prices: 20 pesos</p>
@@ -51,7 +51,7 @@
       
           <div class="image-container">
           <a href="#">
-              <img src="/img/fr.jpg" alt="Image 2">
+              <img src="/final/img/fr.jpg" alt="Image 2">
           </a>
           <h2>Fried Rice</h2>
           <p>Prices: 30 pesos</p>
@@ -59,7 +59,7 @@
       
           <div class="image-container">
           <a href="#">
-              <img src="/img/jr.jpg" alt="Image 3">
+              <img src="/final/img/jr.jpg" alt="Image 3">
           </a>
           <h2>Java Rice</h2>
           <p>Prices: 35 pesos</p>
