--- a/silog.html
+++ b/silog.html
@@ -43,7 +43,7 @@
       <div class="image-grid">
           <div class="image-container">
           <a href="#">
-              <img src="/img/hs.jpg" alt="Image 1">
+              <img src="/final/img/hs.jpg" alt="Image 1">
           </a>
           <h2>Hotsilog</h2>
           <p>Prices: 70 pesos</p>
@@ -51,7 +51,7 @@
       
           <div class="image-container">
           <a href="#">
-              <img src="/img/ts.jpg" alt="Image 2">
+              <img src="/final/img/ts.jpg" alt="Image 2">
           </a>
           <h2>Topsilog</h2>
           <p>Prices: 100 pesos</p>
@@ -59,7 +59,7 @@
       
           <div class="image-container">
           <a href="#">
-              <img src="/img/ls.webp" alt="Image 3">
+              <img src="/final/img/ls.webp" alt="Image 3">
           </a>
           <h2>Longsilog</h2>
           <p>Prices: 85 pesos</p>
@@ -67,7 +67,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/ps.png" alt="Image 3">
+              <img src="/final/img/ps.png" alt="Image 3">
           </a>
           <h2>Porksilog</h2>
           <p>Prices: 85 pesos</p>
