--- a/meat.html
+++ b/meat.html
@@ -43,7 +43,7 @@
       <div class="image-grid">
           <div class="image-container">
           <a href="#">
-              <img src="/img/hibol.webp" alt="Image 1">
+              <img src="/final/img/hibol.webp" alt="Image 1">
           </a>
           <h2>Hibol</h2>
           <p>Prices: 40 pesos</p>
@@ -51,7 +51,7 @@
       
           <div class="image-container">
           <a href="#">
-              <img src="/img/paksiw.jpg" alt="Image 2">
+              <img src="/final/img/paksiw.jpg" alt="Image 2">
           </a>
           <h2>Paksiw</h2>
           <p>Prices: 70 pesos</p>
@@ -59,7 +59,7 @@
       
           <div class="image-container">
           <a href="#">
-              <img src="/img/igado.jpg" alt="Image 3">
+              <img src="/final/img/igado.jpg" alt="Image 3">
           </a>
           <h2>Igado</h2>
           <p>Prices: 70 pesos</p>
@@ -67,7 +67,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/tinuno.jpg" alt="Image 3">
+              <img src="/final/img/tinuno.jpg" alt="Image 3">
           </a>
           <h2>Tinuno</h2>
           <p>Prices: 70 pesos</p>
@@ -79,7 +79,7 @@
       <div class="image-grid">
           <div class="image-container">
           <a href="#">
-              <img src="/img/Dinuguan.JPG" alt="Image 1">
+              <img src="/final/img/Dinuguan.JPG" alt="Image 1">
           </a>
           <h2>Dinardaraan</h2>
           <p>Prices: 80 pesos</p>
@@ -87,7 +87,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/caliente.JPG" alt="Image 2">
+              <img src="/final/img/caliente.JPG" alt="Image 2">
           </a>
           <h2>Caliente</h2>
           <p>Prices: 70 pesos</p>
@@ -95,7 +95,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/ibaliktad.jpg" alt="Image 3">
+              <img src="/final/img/ibaliktad.jpg" alt="Image 3">
           </a>
           <h2>Imbaliktad</h2>
           <p>Prices: 95 pesos</p>
@@ -103,7 +103,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/bg.jpg" alt="Image 3">
+              <img src="/final/img/bg.jpg" alt="Image 3">
           </a>
           <h2>Budget Meal</h2>
           <p>Prices: 70 pesos</p>
@@ -115,7 +115,7 @@
       <div class="image-grid">
           <div class="image-container">
           <a href="#">
-              <img src="/img/pancit.jpg" alt="Image 1">
+              <img src="/final/img/pancit.jpg" alt="Image 1">
           </a>
           <h2>Pancit</h2>
           <p>Prices: 50 pesos</p>
@@ -123,7 +123,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/be.webp" alt="Image 2">
+              <img src="/final/img/be.webp" alt="Image 2">
           </a>
           <h2>Boiled Egg</h2>
           <p>Prices: 15 pesos</p>
@@ -131,7 +131,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/fe.jpeg" alt="Image 3">
+              <img src="/final/img/fe.jpeg" alt="Image 3">
           </a>
           <h2>Fried Egg</h2>
           <p>Prices: 17 pesos</p>
@@ -139,7 +139,7 @@
 
           <div class="image-container">
           <a href="#">
-              <img src="/img/turta.jpg" alt="Image 3">
+              <img src="/final/img/turta.jpg" alt="Image 3">
           </a>
           <h2>Turta</h2>
           <p>Prices: 50 pesos</p>
