--- a/sign.html
+++ b/sign.html
@@ -58,7 +58,7 @@
         }
         </script>
 
-        <h1><img src="/img/th.jpg" alt="th.jpg"></h1>
+        <h1><img src="/final/img/th.jpg" alt="th.jpg"></h1>
         <p>Saludares FoodHouse is a family friendly company that consistently satisfies our consumers while keeping sustainbility top-of-mind. <br>We're proud to offer the widest range of our best products at affordable prices since our besiness first begun.</p>
 
         <footer class="navbar1 navbar-expand-lg bg-body-tertiary">
